@@ -17,14 +17,16 @@
  */
 package org.apache.hadoop.hdfs.server.blockmanagement;
 
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
-import org.apache.hadoop.hdfs.protocol.Block;
-import org.apache.hadoop.hdfs.server.common.HdfsServerConstants.ReplicaState;
 
 import java.util.List;
 import java.util.Map;
 import java.util.Queue;
+
+import org.apache.hadoop.hdfs.protocol.Block;
+import org.apache.hadoop.hdfs.server.common.HdfsServerConstants.ReplicaState;
+
+import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
 
 /**
  * In the Standby Node, we can receive messages about blocks
@@ -100,8 +102,8 @@ class PendingDataNodeMessages {
     return queue;
   }
   
-  public int count() {
-    return count;
+  int count() {
+    return count ;
   }
 
   @Override
@@ -117,8 +119,9 @@ class PendingDataNodeMessages {
     return sb.toString();
   }
 
-  public Iterable<ReportedBlockInfo> takeAll() {
-    List<ReportedBlockInfo> rbis = Lists.newArrayListWithCapacity(count);
+  Iterable<ReportedBlockInfo> takeAll() {
+    List<ReportedBlockInfo> rbis = Lists.newArrayListWithCapacity(
+        count);
     for (Queue<ReportedBlockInfo> q : queueByBlockId.values()) {
       rbis.addAll(q);
     }
